--- a/KHL Scoreboard/Base.lproj/Main.storyboard
+++ b/KHL Scoreboard/Base.lproj/Main.storyboard
@@ -1,26 +1,168 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16C53a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_5" orientation="landscape">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="KHL_Scoreboard" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="736" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2eX-Su-AhX">
+                                <rect key="frame" x="102.66666666666666" y="20" width="99.999999999999972" height="100"/>
+                                <color key="backgroundColor" red="0.078396700319999998" green="0.48059427739999999" blue="0.75471824409999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="0i2-MA-9ga"/>
+                                    <constraint firstAttribute="width" constant="100" id="Jqq-ff-Ew0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="62"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="Qra-ZH-dVg">
+                                <rect key="frame" x="106.66666666666666" y="128" width="94" height="29"/>
+                                <connections>
+                                    <action selector="homeScoreStepper:" destination="BYZ-38-t0r" eventType="valueChanged" id="IDM-Sc-Yw8"/>
+                                </connections>
+                            </stepper>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xds-Dz-Ode">
+                                <rect key="frame" x="89.666666666666657" y="165" width="125.99999999999997" height="55"/>
+                                <color key="backgroundColor" red="0.081362657248973846" green="0.46469193696975708" blue="0.74293649196624756" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="55" id="B6t-fO-D5z"/>
+                                    <constraint firstAttribute="width" constant="126" id="Vel-5q-Uwu"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="45"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Away" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B1v-di-Z4P">
+                                <rect key="frame" x="529.66666666666663" y="165" width="126" height="55"/>
+                                <color key="backgroundColor" red="0.91181486845016479" green="0.21798139810562134" blue="0.25124794244766235" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="55" id="f7R-7p-GaE"/>
+                                    <constraint firstAttribute="width" constant="126" id="ilG-NM-wNl"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="KHL_logo_shield.svg.png" translatesAutoresizingMaskIntoConstraints="NO" id="RFx-Tr-xxz">
+                                <rect key="frame" x="248" y="143" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="Uz0-NU-hAs"/>
+                                    <constraint firstAttribute="width" constant="240" id="aV9-ud-a0l"/>
+                                </constraints>
+                            </imageView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jL8-JQ-PFk">
+                                <rect key="frame" x="0.0" y="370" width="736" height="44"/>
+                                <items>
+                                    <barButtonItem systemItem="play" id="ieM-4b-hzk">
+                                        <connections>
+                                            <action selector="playButton:" destination="BYZ-38-t0r" id="vi3-wS-yx6"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="MeW-9m-05P"/>
+                                    <barButtonItem title="New Game" id="XE0-nT-TsD">
+                                        <connections>
+                                            <action selector="newGameButton:" destination="BYZ-38-t0r" id="Jnc-QT-1dQ"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="c0u-hb-xch"/>
+                                    <barButtonItem systemItem="pause" id="XOB-Jt-nuz">
+                                        <connections>
+                                            <action selector="pauseButton:" destination="BYZ-38-t0r" id="Sqv-bO-WF4"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mRL-6L-6eG">
+                                <rect key="frame" x="245.66666666666669" y="15" width="245.00000000000006" height="105"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="245" id="B27-68-d8w"/>
+                                    <constraint firstAttribute="height" constant="105" id="IkI-Z4-8Ed"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="80"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iMO-ak-Ij6">
+                                <rect key="frame" x="539.66666666666663" y="20" width="100" height="100"/>
+                                <color key="backgroundColor" red="0.91181486845016479" green="0.21798139810562134" blue="0.25124794244766235" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="Thf-33-IeD"/>
+                                    <constraint firstAttribute="height" constant="100" id="xxJ-FN-Ycs"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="62"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="10" minValue="1" maxValue="15" translatesAutoresizingMaskIntoConstraints="NO" id="H1f-Ey-HHO">
+                                <rect key="frame" x="243.66666666666669" y="286" width="249.00000000000006" height="31"/>
+                                <connections>
+                                    <action selector="slider:" destination="BYZ-38-t0r" eventType="valueChanged" id="Pqk-Tw-tGq"/>
+                                </connections>
+                            </slider>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="AFX-Ca-b31">
+                                <rect key="frame" x="542" y="128" width="94" height="29"/>
+                                <connections>
+                                    <action selector="awayScoreStepper:" destination="BYZ-38-t0r" eventType="valueChanged" id="a7T-xo-0gQ"/>
+                                </connections>
+                            </stepper>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="H1f-Ey-HHO" firstAttribute="trailing" secondItem="mRL-6L-6eG" secondAttribute="trailing" id="2pm-uG-O40"/>
+                            <constraint firstItem="mRL-6L-6eG" firstAttribute="leading" secondItem="Qra-ZH-dVg" secondAttribute="trailing" constant="45" id="3TJ-Te-K7K"/>
+                            <constraint firstItem="mRL-6L-6eG" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="-5" id="8Zo-ry-Iw4"/>
+                            <constraint firstItem="jL8-JQ-PFk" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="8b7-Tz-FSw"/>
+                            <constraint firstItem="iMO-ak-Ij6" firstAttribute="leading" secondItem="mRL-6L-6eG" secondAttribute="trailing" constant="49" id="FYj-ee-NXG"/>
+                            <constraint firstItem="H1f-Ey-HHO" firstAttribute="top" secondItem="RFx-Tr-xxz" secondAttribute="bottom" constant="15" id="Gkd-44-PoK"/>
+                            <constraint firstItem="B1v-di-Z4P" firstAttribute="leading" secondItem="mRL-6L-6eG" secondAttribute="trailing" constant="39" id="IER-rE-jFd"/>
+                            <constraint firstItem="jL8-JQ-PFk" firstAttribute="centerX" secondItem="H1f-Ey-HHO" secondAttribute="centerX" id="KC5-zD-ETh"/>
+                            <constraint firstItem="B1v-di-Z4P" firstAttribute="top" secondItem="AFX-Ca-b31" secondAttribute="bottom" constant="8" id="LGL-0o-0sx"/>
+                            <constraint firstItem="2eX-Su-AhX" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="PQ3-A5-Ork"/>
+                            <constraint firstItem="iMO-ak-Ij6" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Syh-td-ghX"/>
+                            <constraint firstItem="RFx-Tr-xxz" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="UhL-yG-dam"/>
+                            <constraint firstItem="RFx-Tr-xxz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="V1G-ha-zHq"/>
+                            <constraint firstItem="H1f-Ey-HHO" firstAttribute="leading" secondItem="mRL-6L-6eG" secondAttribute="leading" id="Vgj-xK-elh"/>
+                            <constraint firstItem="jL8-JQ-PFk" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="WtX-C4-55V"/>
+                            <constraint firstItem="Qra-ZH-dVg" firstAttribute="top" secondItem="2eX-Su-AhX" secondAttribute="bottom" constant="8" id="aUG-e8-v7E"/>
+                            <constraint firstItem="AFX-Ca-b31" firstAttribute="top" secondItem="iMO-ak-Ij6" secondAttribute="bottom" constant="8" id="cUJ-5y-HLL"/>
+                            <constraint firstItem="mRL-6L-6eG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dwr-Pc-WkP"/>
+                            <constraint firstItem="xds-Dz-Ode" firstAttribute="top" secondItem="Qra-ZH-dVg" secondAttribute="bottom" constant="8" id="eYd-Al-UfJ"/>
+                            <constraint firstItem="mRL-6L-6eG" firstAttribute="leading" secondItem="xds-Dz-Ode" secondAttribute="trailing" constant="30" id="hmJ-vh-21b"/>
+                            <constraint firstItem="AFX-Ca-b31" firstAttribute="leading" secondItem="mRL-6L-6eG" secondAttribute="trailing" constant="51.333333333333258" id="wHr-6h-ntz"/>
+                            <constraint firstItem="mRL-6L-6eG" firstAttribute="leading" secondItem="2eX-Su-AhX" secondAttribute="trailing" constant="43" id="wJL-Q3-Sdb"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="awayScore" destination="iMO-ak-Ij6" id="37o-20-1md"/>
+                        <outlet property="awayStepper" destination="AFX-Ca-b31" id="xD6-WB-zLh"/>
+                        <outlet property="homeScore" destination="2eX-Su-AhX" id="XAl-wZ-4Ym"/>
+                        <outlet property="homeStepper" destination="Qra-ZH-dVg" id="SXF-yw-acl"/>
+                        <outlet property="sliderOutlet" destination="H1f-Ey-HHO" id="eYe-4s-RA1"/>
+                        <outlet property="timelabel" destination="mRL-6L-6eG" id="yyy-SF-RSA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="KHL_logo_shield.svg.png" width="947" height="1024"/>
+    </resources>
 </document>
