--- a/KHL Scoreboard/Base.lproj/Main.storyboard
+++ b/KHL Scoreboard/Base.lproj/Main.storyboard
@@ -177,6 +177,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="36" y="110"/>
         </scene>
     </scenes>
     <resources>
