--- a/KHL Scoreboard/Base.lproj/Main.storyboard
+++ b/KHL Scoreboard/Base.lproj/Main.storyboard
@@ -10,6 +10,33 @@
     </dependencies>
     <scenes>
         <!--View Controller-->
+        <scene sceneID="Iwa-vd-Ehn">
+            <objects>
+                <viewController id="fag-wV-U7R" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="leL-HQ-zDB"/>
+                        <viewControllerLayoutGuide type="bottom" id="X44-Lw-Igi"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="PCd-EM-gMz">
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Switch to KHL01 branch!!  this doesnt work" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ckW-b3-blA">
+                                <rect key="frame" x="169" y="135" width="329" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SZw-R1-qsi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-620" y="52"/>
+        </scene>
+        <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="KHL_Scoreboard" customModuleProvider="target" sceneMemberID="viewController">
