--- a/KHL Scoreboard/Base.lproj/Main.storyboard
+++ b/KHL Scoreboard/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16F43c" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="landscape">
+    <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -19,7 +19,7 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <userGuides>
                             <userLayoutGuide location="475" affinity="minX"/>
@@ -28,10 +28,10 @@
                         </userGuides>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="NYP-Wz-Pvl">
-                                <rect key="frame" x="0.0" y="0.0" width="667" height="331"/>
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="724"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2eX-Su-AhX">
-                                <rect key="frame" x="77" y="88" width="101" height="100"/>
+                                <rect key="frame" x="255.5" y="88" width="101" height="100"/>
                                 <color key="backgroundColor" red="0.078396700319999998" green="0.48059427739999999" blue="0.75471824409999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="0oI-Wu-iKa"/>
@@ -41,8 +41,9 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="Qra-ZH-dVg">
-                                <rect key="frame" x="81" y="196" width="94" height="29"/>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="50" translatesAutoresizingMaskIntoConstraints="NO" id="Qra-ZH-dVg">
+                                <rect key="frame" x="259.5" y="196" width="94" height="29"/>
+                                <color key="backgroundColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="29" id="ONb-ai-8gy"/>
                                     <constraint firstAttribute="width" constant="94" id="Rmp-k2-ACd"/>
@@ -53,7 +54,7 @@
                                 </connections>
                             </stepper>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xds-Dz-Ode">
-                                <rect key="frame" x="64" y="233" width="126" height="55"/>
+                                <rect key="frame" x="242.5" y="233" width="126" height="55"/>
                                 <color key="backgroundColor" red="0.081362657248973846" green="0.46469193696975708" blue="0.74293649196624756" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="55" id="fGD-Oh-WhR"/>
@@ -64,14 +65,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="KHL_logo_shield.svg.png" translatesAutoresizingMaskIntoConstraints="NO" id="RFx-Tr-xxz">
-                                <rect key="frame" x="213.5" y="123.5" width="240" height="128"/>
+                                <rect key="frame" x="392" y="320" width="240" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="Uz0-NU-hAs"/>
                                     <constraint firstAttribute="width" constant="240" id="aV9-ud-a0l"/>
                                 </constraints>
                             </imageView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jL8-JQ-PFk">
-                                <rect key="frame" x="0.0" y="331" width="666.5" height="44"/>
+                                <rect key="frame" x="0.0" y="724" width="1023.5" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="67y-sv-YdE"/>
                                 </constraints>
@@ -95,9 +96,10 @@
                                     </barButtonItem>
                                 </items>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="barTintColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                             </toolbar>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mRL-6L-6eG">
-                                <rect key="frame" x="211" y="15" width="245" height="105"/>
+                                <rect key="frame" x="389.5" y="15" width="245" height="105"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="245" id="B27-68-d8w"/>
                                     <constraint firstAttribute="height" constant="105" id="IkI-Z4-8Ed"/>
@@ -109,13 +111,13 @@
                                 <size key="shadowOffset" width="2" height="5"/>
                             </label>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="10" minValue="1" maxValue="15" translatesAutoresizingMaskIntoConstraints="NO" id="H1f-Ey-HHO">
-                                <rect key="frame" x="209" y="266.5" width="249" height="31"/>
+                                <rect key="frame" x="387.5" y="463" width="249" height="31"/>
                                 <connections>
                                     <action selector="slider:" destination="BYZ-38-t0r" eventType="valueChanged" id="Pqk-Tw-tGq"/>
                                 </connections>
                             </slider>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Away" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B1v-di-Z4P">
-                                <rect key="frame" x="475" y="233" width="126" height="55"/>
+                                <rect key="frame" x="653.5" y="233" width="126" height="55"/>
                                 <color key="backgroundColor" red="0.91181486845016479" green="0.21798139810562134" blue="0.25124794244766235" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="55" id="UXD-oX-vLE"/>
@@ -126,7 +128,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iMO-ak-Ij6">
-                                <rect key="frame" x="485" y="88" width="100" height="100"/>
+                                <rect key="frame" x="663.5" y="88" width="100" height="100"/>
                                 <color key="backgroundColor" red="0.91181486845016479" green="0.21798139810562134" blue="0.25124794244766235" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="6Op-Ri-8eG"/>
@@ -136,12 +138,14 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="AFX-Ca-b31">
-                                <rect key="frame" x="488" y="196" width="94" height="29"/>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="50" translatesAutoresizingMaskIntoConstraints="NO" id="AFX-Ca-b31">
+                                <rect key="frame" x="666.5" y="196" width="94" height="29"/>
+                                <color key="backgroundColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="94" id="CkL-QR-u1X"/>
                                     <constraint firstAttribute="height" constant="29" id="wZe-nd-gb5"/>
                                 </constraints>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <action selector="awayScoreStepper:" destination="BYZ-38-t0r" eventType="valueChanged" id="a7T-xo-0gQ"/>
                                 </connections>
